# AutoVehicle25

./: README.md  cruise_controller.py  lane_keeping.py  open_loop.py
audi_ws/: README.md
audi_ws/install/: local_setup.sh  setup.sh  setup.zsh
audi_ws/install/open_loop/share/open_loop/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
audi_ws/install/open_loop/share/open_loop/cmake/: open_loopConfig.cmake
audi_ws/install/open_loop/share/open_loop/launch/: simulation_launch.py
audi_ws/install/open_loop/share/open_loop/models/hatchback/: model.config
audi_ws/log/: latest_build  latest_list
audi_ws/src/AutoCarROS2/autocar_msgs/: CMakeLists.txt
audi_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
audi_ws/src/log/: latest_build
audi_ws/src/open_loop/: CMakeLists.txt
audi_ws/src/open_loop/launch/: simulation_launch.py
audi_ws/src/open_loop/models/hatchback/: model.sdf
audi_ws/src/open_loop/worlds/: world.sdf
audi_ws/src/robot_sim_bringup/: CMakeLists.txt
audi_ws/src/robot_sim_bringup/config/: camera_demo_config.rviz  demo_config.rviz
audi_ws/src/robot_sim_bringup/worlds/: vehicle_world.sdf
audi_ws/src/simulation_files/: package.xml  setup.cfg  setup.py
audi_ws/src/vehicle_desc/: CMakeLists.txt
audi_ws/src/vehicle_state_publisher/: setup.cfg  setup.py
cp2_simulation/MW208_Raceline_Optimization/: my_track.csv  raceLineOptimizer.mlx
cp2_simulation/simulation_files/: constants.py  lateral.py  longitudinal_controller.py  longtitudinal.py  path.py  simulation.py
(+165 files in other folders)
