<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_loop</name>
  <version>0.1.0</version>
  <description>Bicycle model simulation package</description>
  
  <maintainer email="jshchen@umich.edu">Jackson Chen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>ros_ign_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>